tests/machine/x/go/load_yaml.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/load_yaml.go:26:75: cannot use _ as value or type

1: //go:build ignore
